<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.8"
    android:background="@drawable/bg6"
    tools:context=".RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:alpha="1">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/love_cooking"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/title1"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:textColor="@color/white"
            android:textStyle="italic|bold"
            android:textSize="15sp"
            android:text="@string/slogan"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@+id/title1"
            android:layout_marginTop="50dp"
            android:text="@string/fullname"/>
        <EditText
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/fname"
            android:textColorHint="@color/white"
            android:layout_below="@id/fullname"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:layout_marginVertical="2dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/fname"
            android:text="@string/nh_p_bi_t_danh"/>
        <EditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/uname"
            android:textColorHint="@color/white"
            android:layout_below="@id/username"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:layout_marginVertical="2dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/email_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/uname"
            android:text="@string/email_input"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_input"
            android:textColorHint="@color/white"
            android:layout_below="@id/email_res"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:layout_marginVertical="2dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/email"
            android:text="@string/m_t_kh_u"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass"
            android:textColorHint="@color/white"
            android:layout_below="@id/pass"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:layout_marginVertical="2dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/re_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/password"
            android:text="@string/nh_p_l_i_m_t_kh_u"/>
        <EditText
            android:id="@+id/re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/nh_p_l_i_m_t_kh_u"
            android:textColorHint="@color/white"
            android:layout_below="@id/re_pass"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:layout_marginVertical="2dp"
            android:autofillHints="" />

        <LinearLayout
            android:id="@+id/gen_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/re_password"
            android:gravity="center"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/gi_i_t_nh"/>
                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_below="@+id/gen"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/male"
                        android:text="@string/nam"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <RadioButton
                        android:id="@+id/female"
                        android:text="@string/female"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RadioGroup>
            </RelativeLayout>
            <TextView
                android:id="@+id/birth"
                android:layout_weight="1"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/birth"/>
        </LinearLayout>

        <TextView
            android:id="@+id/addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/gen_birth"
            android:text="@string/addr"/>
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/address"
            android:textColorHint="@color/white"
            android:layout_below="@id/addr"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:layout_marginVertical="2dp"
            android:autofillHints="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:layout_alignParentEnd="true"
            android:theme="@style/Theme.MaterialComponents"
            app:cornerRadius="20dp"
            android:text="@string/btnres"
            android:textColor="@color/white"
            app:strokeColor="@color/antique_white"
            app:rippleColor="@color/gray"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_below="@+id/btnregister"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/btnlo"
            android:theme="@style/Theme.MaterialComponents"
            android:textColor="@color/white"
            app:strokeColor="@color/antique_white"
            app:rippleColor="@color/gray"
            app:cornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</ScrollView>