<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg6"
    android:alpha="0.8"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:alpha="1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logo"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/logonotext" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:textSize="28sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/love_cooking"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/title1"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:textColor="@color/white"
            android:textStyle="italic|bold"
            android:textSize="15sp"
            android:text="@string/slogan"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@+id/title"
            android:layout_marginTop="90dp"
            android:text="@string/email_ng_nh_p" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_input"
            android:text="nmthang.18it2@sict.udn.vn"
            android:textColorHint="@color/white"
            android:layout_below="@id/email_login"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:layout_marginVertical="2dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/pass_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@+id/email"
            android:layout_marginTop="20sp"
            android:text="@string/m_t_kh_u" />

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_input"
            android:text="naga1125"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginVertical="2dp"
            android:layout_below="@id/pass_login"
            android:layout_centerInParent="true"
            android:autofillHints="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_alignParentEnd="true"
            android:theme="@style/Theme.MaterialComponents"
            app:cornerRadius="20dp"
            android:text="@string/ng_nh_p"
            android:textColor="@color/white"
            app:strokeColor="@color/antique_white"
            app:rippleColor="@color/gray"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_below="@+id/btnlogin"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/register"
            android:theme="@style/Theme.MaterialComponents"
            android:textColor="@color/white"
            app:strokeColor="@color/antique_white"
            app:rippleColor="@color/gray"
            app:cornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</ScrollView>