<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_marginVertical="10dp"
    android:layout_height="350dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/dish_image"
            android:scaleType="centerCrop"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name" />
        <TextView
            android:id="@+id/dish_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:maxHeight="55dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_below="@+id/dish_image"
            android:text="@string/dish_s_name"
            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dish_name"
            android:id="@+id/author"
            android:layout_marginTop="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/lovecooking_admin"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/love"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_favorite_border_black_24dp"
            android:layout_below="@+id/author"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/liked"
            android:layout_below="@+id/author"
            android:layout_toEndOf="@+id/love"
            android:layout_marginTop="27dp"
            android:text="@string/like"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>