<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".DishInfoActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image">
            <ImageView
                android:id="@+id/dish_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/todo" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="top|right"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/editDish"
                    android:src="@android:drawable/ic_menu_edit"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="TODO" />
                <ImageButton
                    android:id="@+id/deleteDish"
                    android:layout_marginHorizontal="5dp"
                    android:src="@android:drawable/ic_menu_delete"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="TODO" />
                <ImageButton
                    android:id="@+id/addDishMenu"
                    android:src="@android:drawable/ic_menu_add"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="TODO" />
            </LinearLayout>
            <ImageButton
                android:id="@+id/arrowBack"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_width="wrap_content"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />
        </FrameLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/author_avatar"
            android:scaleType="centerCrop"
            android:src="@drawable/logonotext"
            android:layout_below="@id/image"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <TextView
            android:id="@+id/dish_name"
            android:layout_toEndOf="@+id/author_avatar"
            android:layout_marginTop="7dp"
            android:layout_marginHorizontal="5dp"
            android:layout_below="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_name"
            android:textStyle="bold"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/author"
            android:textSize="16sp"
            android:layout_toEndOf="@id/author_avatar"
            android:textStyle="normal"
            android:layout_marginStart="7dp"
            android:layout_below="@+id/dish_name"
            android:text="@string/lovecooking_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/history"
            android:layout_below="@+id/author"
            android:textStyle="bold|italic"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_n_n_n_y_c_ph_t_tri_n_nh_th_n_o"/>
        <TextView
            android:id="@+id/date"
            android:textStyle="italic"
            android:textSize="12sp"
            android:text="@string/ng_y_t_o"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/cate"
            android:layout_below="@id/history"
            android:text="@string/lo_i_danh_m_c"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_below="@+id/cate"
            android:id="@+id/category"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_height="wrap_content">

        </LinearLayout>
        <TextView
            android:layout_marginTop="3dp"
            android:id="@+id/mate"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/nguy_n_li_u"
            android:layout_below="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/material"
            android:orientation="vertical"
            android:layout_below="@+id/mate"
            android:layout_marginHorizontal="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>
        <TextView
            android:layout_marginTop="3dp"
            android:id="@+id/steps"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/c_c_b_c_l_m"
            android:layout_below="@+id/material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/step_and_img"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_below="@+id/steps"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        </LinearLayout>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/love"
            android:src="@drawable/ic_favorite_border_black_24dp"
            android:layout_below="@+id/step_and_img"
            android:layout_margin="5dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/liked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/love"
            android:layout_below="@+id/step_and_img"
            android:text="@string/like_count"
            android:textSize="14sp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:textStyle="normal"
            />
        <TextView
            android:id="@+id/txtcmt"
            android:layout_below="@+id/liked"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="@string/nh_n_x_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cmt"
            android:layout_below="@+id/txtcmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_below="@+id/cmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/textcmt"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textAlignment="textStart"
                android:hint="Nhập bình luận"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:id="@+id/send"
                android:layout_weight="6"
                android:src="@drawable/ic_send_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>