<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dim_gray"
    tools:context=".SplashActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/logonotext" />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:textSize="28sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/love_cooking"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/title1"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:textColor="@color/white"
        android:textStyle="italic|bold"
        android:textSize="15sp"
        android:text="@string/slogan"
        android:layout_centerHorizontal="true"/>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/progress_work"
        android:text="Đang kiểm tra...."
        android:layout_marginTop="10dp"
        android:layout_below="@+id/progress"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="normal|italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>